--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,18 +21,23 @@ dependencies:
   rive: ^0.7.22
   shared_preferences: ^2.0.13
   provider: ^6.0.2
+  app_settings: ^4.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/logo.png"
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/
-    - assets/music/
     - assets/icons/
-    - assets/rive/
