--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,22 @@ name: music_play
 description: A music player app.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
-repository: "https://github.com/hakouklvn/musicPlayer.git"
+repository: "https://github.com/hakouklvn/mousika.git"
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  permission_handler: ^8.3.0
-  google_fonts: ^2.2.0
+  permission_handler: ^9.2.0
+  google_fonts: ^3.0.1
   audio_service: ^0.18.3
   just_audio: ^0.9.18
   get_it: ^7.2.0
-  rive: ^0.7.22
+  rive: ^0.8.4
   shared_preferences: ^2.0.13
   provider: ^6.0.2
   app_settings: ^4.1.1
@@ -27,7 +27,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
   flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
