--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   provider: ^6.0.2
   app_settings: ^4.1.1
   on_audio_query: ^2.6.0
+  sleek_circular_slider: ^2.0.1
+  flutter_riverpod: ^1.0.4
+  hive_flutter: ^1.1.0
+  hive: ^2.2.2
 
 dev_dependencies:
   flutter_test:
