--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.2
   flutter_local_notifications: ^9.6.1
+  dynamic_color: ^1.5.4
+
+dependency_overrides:
+  material_color_utilities: ^0.2.0
 
 dev_dependencies:
   flutter_test:
